objects/Sob1__c.object
<CustomObject>
    <fields>
        <fullName>SF1__c</fullName>
        <label>SF1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF2__c</fullName>
        <label>SF2</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SF3__c</fullName>
        <label>SF3</label>
        <length>9</length>
        <type>Text</type>
    </fields>
</CustomObject>